# fire-redis

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
benches/: redis_command_bench.rs  store_bench.rs
docs/: ARCHITECTURE.md  COMPATIBILITY.md  DEMO.md  OBSERVABILITY.md  PROGRESS.md  ROADMAP.md  TRADEOFFS.md
perf/: .gitignore  README.md  compare-images.sh  compare.py  config.py  docker_.py  full.toml  main.py  perf.py  perf.toml  plotter.py  pyproject.toml  run_matrix.py  runner.py  scales.example.json  single.toml
src/: http.rs  lib.rs  metrics.rs  observability.rs  resp.rs  server.rs
src/commands/: conn.rs  data.rs  mod.rs
src/persistence/: aof.rs  manager.rs  mod.rs  rdb.rs
src/store/: hash.rs  list.rs  mod.rs  set.rs  sorted_set.rs  string.rs
tests/: common.rs  hash_and_list.rs  misc_commands.rs  persistence.rs  ping_and_strings.rs  set_and_zset.rs  smoke_extended.rs  ttl_and_expiration.rs
tests/support/: mod.rs
