[project]
name = "redis-perf"
version = "0.3.0"
description = "Redis performance benchmark toolkit — unified entry point with Docker comparison"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "redis>=7.4.0",
]

[project.scripts]
redis-perf = "perf:main"
